fixed a bug: notFound styling overlap other pages

--- a/client/public/css/not-found.css
+++ b/client/public/css/not-found.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=opensans:500);
 body {
-  background: #016CC8;
+  background: #016cc8;
   color: #fff;
   font-family: "Open Sans", sans-serif;
   max-height: 700px;
